overlays/nuc-prod/esphome/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-esphome
spec:
  stripPrefix:
    prefixes:
      - /esphome
