overlays/nuc-prod/esphome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: home-ops-strip-esphome@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: glumserver.localdomain
      http:
        paths:
          - path: /esphome
            pathType: Prefix
            backend:
              service:
                name: esphome
                port:
                  name: http
